--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,12 @@ table {
 }
 td {
   text-align: center;
+  padding: 5px 0;
+  border: none;
+}
+th {
+  padding: 5px 0;
+  border: none;
 }
 .bx {
   font-size: 1.6em;
