--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,8 @@ center,
 dl,
 dt,
 dd,
-/* ol,
-ul, */
+ol,
+ul,
 li,
 fieldset,
 form,
@@ -129,6 +129,10 @@ table {
 }
 
 /* General styles */
+ol,
+ul {
+  margin: 2px 10px;
+}
 header {
   width: 100%;
   height: 50px;
@@ -159,9 +163,16 @@ a {
 }
 table {
   width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+}
+table tr:hover {
+  background-color: cornflowerblue;
+}
+table tr:first-child:hover {
+  background-color: transparent;
 }
 td {
-  text-align: center;
   padding: 5px 0;
   border: none;
 }
