--- a/css/styles.css
+++ b/css/styles.css
@@ -152,19 +152,17 @@ li:hover {
   background-color: var(--interaction-color);
 }
 header {
-  width: 100%;
-  height: 50px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  background-color: rgb(148, 148, 148);
+  background-color: var(--light-gray);
 }
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(148, 148, 148);
+  background-color: var(--light-gray);
 }
 button {
   min-width: 44px;
@@ -181,23 +179,26 @@ a {
 }
 table {
   width: 100%;
-  text-align: center;
   border-collapse: collapse;
 }
 table tr:hover {
-  background-color: cornflowerblue;
+  background-color: var(--interaction-color);
 }
+
 table tr:first-child:hover {
   background-color: transparent;
 }
-td {
-  padding: 5px 0;
-  border: none;
-}
 th {
-  padding: 5px 0;
+  padding: 10px 0;
+  border: none;
+  border-bottom: 1px solid var(--light-gray);
+  text-align: start;
+}
+td {
+  padding: 10px 0;
   border: none;
 }
+
 input {
   cursor: pointer;
 }
@@ -223,15 +224,6 @@ input {
 }
 
 /* Header styles */
-.header-logo {
-  width: 10%;
-  height: 30px;
-  padding: 10px;
-}
-.header-logo__img {
-  width: 30px;
-  height: 30px;
-}
 .header-search {
   width: 55%;
   height: 100%;
@@ -240,16 +232,15 @@ input {
   justify-content: space-evenly;
 }
 .header-search__form {
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
 }
 .header-search__form-imput {
-  width: 70%;
+  width: 300px;
   height: 30px;
-  border-radius: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--light-gray);
 }
 .header-search__icon {
   width: 30px;
@@ -282,9 +273,10 @@ input {
   justify-content: space-around;
 }
 .header-user__img {
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
+  margin: 5px 0 5px 0;
 }
 
 /* Content styles */
@@ -298,6 +290,7 @@ input {
 .nav-bar {
   width: 25%;
   height: 90vh;
+  border-right: 1px solid var(--light-gray);
 }
 li img.navbar-icon {
   width: 15px;
@@ -324,7 +317,7 @@ li img.navbar-icon {
   height: 90vh;
   position: absolute;
   right: -40%;
-  background-color: rgb(148, 148, 148);
+  background-color: var(--light-gray);
   display: none;
 }
 .file {
